--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="estilos/stylo.css">
     <link rel="stylesheet" href="estilo/mediaquery.css">
     <title>login</title>
@@ -20,27 +21,29 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo. Faça o login para acessar sua conta.</p>
                 <form action="login.php" method="post" autocomplete="on">
-                    
+
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             person
-                           </span>
-                        <input type="email" name="user" id="user" placeholder="Digite seu email" autocomplete="email" required maxlength="50">
+                        </span>
+                        <input type="email" name="user" id="user" placeholder="Digite seu email" autocomplete="email"
+                            required maxlength="50">
                         <label for="user">Email</label>
-                    </div> 
+                    </div>
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             vpn_key
-                           </span>
-                        <input type="password" name="senha" id="senha" placeholder="Digite sua senha" autocomplete="current-password" required minlength="8" maxlength="15">
+                        </span>
+                        <input type="password" name="senha" id="senha" placeholder="Digite sua senha"
+                            autocomplete="current-password" required minlength="8" maxlength="15">
                         <label for="senha">Senha</label>
                     </div>
-                    <div>
-                        <input type="button" value="Entrar">
-                        <a href="esqueci.html">Esqueci minha senha <span class="material-symbols-outlined">
+
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">Esqueci minha senha <span class="material-symbols-outlined">
                             mail
-                           </span></a>
-                    </div>
+                        </span></a>
+
                 </form>
             </div>
         </section>
