ajeitando tela de login

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                     </div>
 
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html" class="botao">Esqueci minha senha <span class="material-symbols-outlined">
-                            mail
-                        </span></a>
+                    <a href="esqueci.html" class="botao">Esqueci minha senha</a>
+                    
 
                 </form>
             </div>
