adicionando termos de privacidade

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             </div>
         </section>
     </main>
-
+    <div id="termos">
+        <p>Termo de uso e <a href="termos.html">privacidade.</a></p>
+    </div>
 </body>
 
 </html>
