alterações na tela

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 </form>
             </div>
         </section>
-    </main>
-    <div id="termos">
+    </main> 
+    <!--<div id="termos">
         <p>Termo de uso e <a href="termos.html">privacidade.</a></p>
-    </div>
+    </div>-->
 </body>
 
 </html>
